--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -1,6 +1,6 @@
 @import './base.css';
+@import 'primeicons/primeicons.css';
 
-/*
 #app {
   max-width: 1280px;
   margin: 0 auto;
@@ -8,29 +8,15 @@
   font-weight: normal;
 }
 
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
-  padding: 3px;
+.p-togglebutton {
+  --p-togglebutton-content-checked-background: var(--p-primary-color);
+  --p-togglebutton-checked-color: var(--p-primary-contrast-color);
 }
 
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
+.p-card {
+  margin-top: 1rem;
 }
 
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
-
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
-  }
-}*/
+.button-row > *:not(:last-child) {
+  margin-right: 0.5rem;
+}
